crates/rstest-bdd-macros/tests/ui/outline_missing_column.stderr
error: failed to parse feature file: Could not parse feature file: $WORKSPACE/target/tests/trybuild/rstest-bdd-macros/../../../../crates/rstest-bdd-macros/tests/features/outline_missing_column.feature
 --> tests/ui/outline_missing_column.rs:3:1
  |
3 | #[scenario(path = "../../../../crates/rstest-bdd-macros/tests/features/outline_missing_column.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
